--- a/src/components/CityItem/CityItem.module.scss
+++ b/src/components/CityItem/CityItem.module.scss
@@ -29,4 +29,22 @@
   .date {
     font-size: 1.5rem;
   }
+
+  .deleteBtn {
+    height: 2rem;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: none;
+    background-color: theme.$dark-1;
+    color: theme.$light-2;
+    font-size: 1.6rem;
+    font-weight: 400;
+    cursor: pointer;
+    transition: all 0.2s;
+
+    &:hover {
+      background-color: theme.$brand-1;
+      color: theme.$dark-1;
+    }
+  }
 }
