--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -24,3 +24,17 @@
   background: none;
   border: 1px solid currentColor;
 }
+
+// Button type: position
+.position {
+  position: absolute;
+  z-index: 1000;
+  bottom: 4rem;
+  left: 50%;
+  transform: translateX(-50%);
+  font-weight: 700;
+  font-size: 1.4rem;
+  background-color: theme.$brand-2;
+  color: theme.$dark-1;
+  box-shadow: 0 0.4rem 1.2rem rgba(36, 42, 46, 0.16);
+}
