--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -20,4 +20,12 @@
     display: flex;
     justify-content: space-between;
   }
+
+  .flag {
+    position: absolute;
+    right: 1rem;
+    top: 2.7rem;
+    font-size: 2.8rem;
+    color: theme.$dark-2;
+  }
 }
